# lightning-reader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/reader-core/: Cargo.toml
crates/reader-core/src/: config.rs  epub.rs  layout.rs  lib.rs  nav.rs  normalize.rs  pdf.rs  state.rs  text.rs  types.rs
crates/reader-core/src/epub/: book.rs  container.rs  error.rs  opf.rs
crates/reader-core/src/layout/: inline.rs  paginate.rs  table.rs  words.rs
crates/reader-core/src/nav/: archive.rs  epub2.rs  epub3.rs  paths.rs
crates/reader-core/src/normalize/: html.rs  images.rs  inline.rs  postprocess.rs  table.rs  tests.rs
crates/reader-core/src/pdf/: error.rs  load.rs  loader.rs  lopdf.rs  pdf_rs.rs  text.rs  types.rs
crates/reader-core/tests/: pdf.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  layout.rs  lib.rs  reader_view.rs  search_view.rs  spritz_view.rs  views.rs
crates/ui/src/app/: command.rs  footnotes.rs  prefetch.rs  run.rs  search.rs  selection.rs  settings.rs  spritz.rs  state.rs  toc.rs  types.rs
crates/ui/src/reader_view/: areas.rs  images.rs  navigation.rs  render.rs  search.rs  selection.rs  tests.rs  text.rs  theme.rs  view.rs
crates/ui/src/spritz_view/: control.rs  render.rs  tests.rs  view.rs
docs/: ROADMAP.md  SPRITZ.md
librarian/: .gitignore  AGENTS.md  Cargo.toml
librarian/crates/highlight/: Cargo.toml
librarian/crates/highlight/src/: lib.rs
librarian/crates/reader-core/: Cargo.toml
librarian/crates/reader-core/src/: epub.rs  layout.rs  lib.rs  nav.rs  normalize.rs  state.rs  types.rs
librarian/crates/ui/: Cargo.toml
librarian/crates/ui/src/: app.rs  lib.rs  reader_view.rs  views.rs
librarian/docs/: ROADMAP.md
librarian/librarian/: Cargo.toml
librarian/librarian/src/: main.rs
librarian/src/: main.rs
