[package]
name = "reader-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
quick-xml = "0.38"
html5ever = "0.26"
kuchiki = "0.8"
unicode-linebreak = "0.1"
unicode-segmentation = "1.11"
hyphenation = "0.8"
thiserror = "1"
directories = "5"
sha2 = "0.10"
lopdf = "0.38"

[dev-dependencies]
tempfile = "3"
