[package]
name = "reader-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "6.0"
quick-xml = "0.38"
html5ever = "0.36"
kuchiki = "0.8"
unicode-linebreak = "0.1"
unicode-segmentation = "1.11"
hyphenation = "0.8"
thiserror = "2"
directories = "6"
sha2 = "0.10"
lopdf = "0.38"
lru = "0.12"
pdf = { version = "0.9", default-features = true }
highlight = { path = "../highlight" }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
tempfile = "3"
